--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,28 @@
 {
-    "compilerOptions": {
-        "lib": [
-            "dom",
-            "es2017"
-        ],
-        "baseUrl": ".",
-        "paths": {
-            "@main/*": ["src/*"]
-        },
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "esModuleInterop": true,
-        "noImplicitAny": false,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "target": "es6",
-        "jsx": "react",
-        "typeRoots": ["node_modules/@types", "src/typings"],
-        "types" : []
+  "compilerOptions": {
+    "lib": [
+      "dom",
+      "esNext"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@main/*": ["src/*"]
     },
-    "exclude": [
-        "node_modules",
-        "**/*.test.ts",
-        "**/*.test.tsx",
-        "node_modules/@types/jest"
-    ]        
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "target": "es6",
+    "jsx": "react",
+    "typeRoots": ["node_modules/@types", "src/typings"],
+    "types" : []
+  },
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "node_modules/@types/jest"
+  ]
 }
