--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "license": "MIT",
   "homepage": "https://polskikh01@bitbucket.org/polskikh01/js_rep#readme",
   "dependencies": {
-    "@ijl/cli": "^1.10.3",
+    "@ijl/cli": "^2.0.1",
     "classnames": "^2.2.6",
+    "csstype": "^3.0.5",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
@@ -45,6 +49,7 @@
     "postcss-nested": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-simple-vars": "^6.0.1",
+    "react-redux": "^7.2.2",
     "style-loader": "^2.0.0"
   },
   "browserslist": [
