--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "autoprefixer": "^10.0.2",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
