--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "homepage": "https://polskikh01@bitbucket.org/polskikh01/js_rep#readme",
   "dependencies": {
-    "@ijl/cli": "^2.1.2",
+    "@ijl/cli": "2.3.4",
     "classnames": "^2.2.6",
     "csstype": "^3.0.5",
     "express": "^4.17.1",
