--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "classnames": "^2.2.6",
     "csstype": "^3.0.5",
     "express": "^4.17.1",
+    "final-form": "^4.20.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
