KH-16 | ESLINT + PRETTIER

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ijl-cli --server --port=8099 --with-open-browser",
     "build": "npm run clean && ijl-cli --build --dev",
     "build:prod": "npm run clean && ijl-cli --build",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "eslint ./src",
+    "prettier": "prettier --write \"**/*.*(ts|tsx)\""
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,11 @@
     "@ijl/cli": "2.5.6",
     "classnames": "^2.2.6",
     "csstype": "^3.0.5",
+    "eslint-config": "^0.3.0",
+    "eslint-config-prettier": "^7.2.0",
     "express": "^4.17.1",
     "final-form": "^4.20.1",
+    "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -37,9 +42,14 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "autoprefixer": "^10.0.2",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
+    "eslint": "^7.19.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "postcss": "^8.1.8",
     "postcss-calc": "^7.0.5",
     "postcss-color-function": "^4.1.0",
