--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "eslint-config-prettier": "^7.2.0",
     "express": "^4.17.1",
     "final-form": "^4.20.1",
+    "i18next": "^19.8.7",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-i18next": "^11.8.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
