--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ijl-cli --server --port=8099 --with-open-browser",
     "build": "npm run clean && ijl-cli --build --dev",
     "build:prod": "npm run clean && ijl-cli --build",
@@ -30,20 +30,27 @@
     "express": "^4.17.1",
     "final-form": "^4.20.1",
     "i18next": "^19.8.4",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-final-form": "^6.5.2",
     "react-i18next": "^11.8.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.17",
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/jest": "^26.0.20",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.16",
@@ -51,11 +58,19 @@
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "autoprefixer": "^10.0.2",
+    "axios-mock-adapter": "^1.19.0",
+    "babel-jest": "^26.6.3",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^7.19.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "jest": "^26.6.3",
+    "jest-enzyme": "^7.1.2",
+    "jest-extended": "^0.11.5",
     "postcss": "^8.1.8",
     "postcss-calc": "^7.0.5",
     "postcss-color-function": "^4.1.0",
