--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/preset-typescript": "^7.12.17",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.16",
