--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "target": "es6",
     "jsx": "react",
     "typeRoots": ["node_modules/@types", "src/typings"],
-    "types" : []
+    "types" : ["node", "webpack-env"]
   },
   "exclude": [
     "node_modules",
