--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.14.0",
     "react-final-form": "^6.5.2",
     "react-i18next": "^11.8.6",
+    "react-meta-tags": "^1.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
